<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/padi_one" />

        <ImageView
            android:id="@+id/p_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/p1"
            android:layout_marginLeft="@dimen/marginLeft1"
            android:layout_marginTop="@dimen/marginTopTwo"
            android:contentDescription="@string/PADI_logo"
            android:src="@drawable/padi_logo" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/p_logo"
            android:layout_marginLeft="@dimen/marginLeftText"
            android:layout_marginTop="@dimen/marginTopTwo"
            android:text="@string/desc"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textSize"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/addresss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description"
            android:layout_marginLeft="@dimen/marginLeftTextTwo"
            android:layout_marginTop="@dimen/marginTopTwo"
            android:autoLink="map"
            android:drawableLeft="@drawable/pin"
            android:drawablePadding="@dimen/padding"
            android:text="Jl. Bangka 7 Dalam No. 14 \nSouth Jakarta, Indonesia"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addresss"
            android:layout_marginLeft="@dimen/marginLeftTextTwo"
            android:layout_marginTop="@dimen/marginTopOne"
            android:autoLink="email"
            android:drawableLeft="@drawable/message"
            android:drawablePadding="@dimen/padding"
            android:text="@string/PADI_email"
            android:textColor="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            android:textSize="@dimen/textSize" />

        <Button
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginLeft="@dimen/marginLeft2"
            android:layout_marginTop="@dimen/marginTopTwo"
            android:background="@color/colorAccent"
            android:onClick="goToWeb"
            android:padding="@dimen/paddingButton"
            android:text="@string/Learn_more"
            android:textSize="@dimen/textSize" />

    </RelativeLayout>

</ScrollView>